#
# libmedio - C++ I/O Library for loading/saving medical data formats
#            https://github.com/hzdr-MedImaging/libmedio
#
# Copyright (C) 2004-2025 hzdr.de and contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

AC_PREREQ(2.57)
AC_INIT(mp2ecat, 0.5, j.maus@hzdr.de)
AC_COPYRIGHT(Copyright (C) 2011-2014 Jens Maus <j.maus@hzdr.de>)
#AC_REVISION($Revision $)
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADER([src/includes/config.h])

# Checks for host
AC_MSG_CHECKING(for host operating system)
AC_SUBST(HOST_OS, `uname -s`)
AC_MSG_RESULT(${HOST_OS})

# Checks for host machine type
AC_MSG_CHECKING(for host system machine type)
AC_SUBST(HOST_MACHINE, `uname -m`)
AC_MSG_RESULT(${HOST_MACHINE})

# Checks for host processor type
AC_MSG_CHECKING(for host system processor type)
AC_SUBST(HOST_CPU, `uname -p`)
AC_MSG_RESULT(${HOST_CPU})

# check if the user wants to have ansi color output
AC_ANSI_COLOR

# Checks for programs.
AC_PROG_CXX
AC_GNU_SOURCE

# Check if user wants complete static linkage
AC_ENABLE_STATIC_BUILD

# Check which linkage the user wants
AC_ENABLE_SHARED_LIB

# Check for the Qt4 libraries
AC_ENABLE_STATIC_QT
AC_PATH_QT4
AC_PATH_QT4_INC
AC_PATH_QT4_LIB
AC_PATH_QT4_QMAKE

# Check for the medical IO library
AC_ENABLE_STATIC_MEDIO
AC_PATH_MEDIO
AC_PATH_MEDIO_LIB
AC_PATH_MEDIO_INC

# Check for the runtime debug library
AC_ENABLE_DEBUG
AC_ENABLE_STATIC_RTDEBUG
AC_PATH_RTDEBUG
AC_PATH_RTDEBUG_LIB
AC_PATH_RTDEBUG_INC

# checking gcc version
AC_PROG_GCC_VERSION

# Checks for some tools which we need
AC_PATH_PROG(MKDIR_PATH, mkdir)
AC_PATH_PROG(CP_PATH, cp)
AC_PATH_PROG(MV_PATH, mv)
AC_PATH_PROG(TAR_PATH, tar)
AC_PATH_PROG(GZIP_PATH, gzip)
AC_PATH_PROG(RM_PATH, rm)
AC_PATH_PROG(CHMOD_PATH, chmod)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h termcap.h ncurses/termcap.h ncursesw/termcap.h])
#AC_CHECK_LIB(termcap, initscr, HAVE_TERMCAP="termcap")
#AC_CHECK_LIB(curses, initscr, HAVE_TERMCAP="curses")
#AC_CHECK_LIB(ncurses, initscr, HAVE_TERMCAP="ncurses")
#AC_CHECK_LIB(ncursesw, initscr, HAVE_TERMCAP="ncursesw")
#AC_SUBST(HAVE_TERMCAP)
#AC_DEFINE(HAVE_TERMCAP, 1, have termcap)

# check for the long-double variants of fabs/sqrt/acos
#AC_CHECK_DECLS([fabsl],,,[#include <math.h>])
#AC_CHECK_DECLS([sqrtl],,,[#include <math.h>])
#AC_CHECK_DECLS([acosl],,,[#include <math.h>])

# CXX specifics
AC_CXX_NAMESPACES
AC_CXX_STATIC_CAST

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([sysconf sysctl])

AC_PROG_MAKE_SET

AC_CONFIG_FILES([Makefile m4/Makefile src/mp2ecat.pro])


AC_OUTPUT
